archived/tests/machine/x/cpp_old/partial_application.mochi.error
line 10: ../../../tests/machine/x/cpp/partial_application.mochi.cpp:10:10: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   10 | auto add(auto a, auto b) {
      |          ^~~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp:10:18: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   10 | auto add(auto a, auto b) {
      |                  ^~~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/partial_application.mochi.cpp:15:24: error: no matching function for call to ‘add(int)’
   15 |         auto add5 = add(5);
      |                     ~~~^~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp:10:6: note: candidate: ‘template<class auto:28, class auto:29> auto add(auto:28, auto:29)’
   10 | auto add(auto a, auto b) {
      |      ^~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp:10:6: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/partial_application.mochi.cpp:15:24: note:   candidate expects 2 arguments, 1 provided
   15 |         auto add5 = add(5);
      |                     ~~~^~~

  9 | 
 10 | auto add(auto a, auto b) {
 11 | 	return (a + b);
